--- a/concept-of-cybersecurity/evolution-of-cyberthreats.html
+++ b/concept-of-cybersecurity/evolution-of-cyberthreats.html
@@ -26,32 +26,33 @@
                 <ul class="text-xl md:flex hidden items-center space-x-8 ">
                     <li>Home</li>
                     <li>Recent News</li>
+                    <li></li>
                     <li>Learn Now</li>
                     <li><i class="fa-solid fa-bars"></i></li>
                 </ul>
             </nav>
       
-      <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
+      <div class="absolute inset-0 bg-gradient-to-b from-transparent to-[#191A2E]"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
 				<h4 class="text-6xl font-medium">Evolution of Cyber Threats</h4>
 				<h6 class="text-2xl mt-4"><a href="#discovery">From Basic Malware to Complex Threats</a> | <a href="#common">Rise of Social Engineering</a> | <a href="development">Modern Threats in Cloud.</a></h6>
 			</div>
 		</div>
     
-		<div class="bg-gradient-to-b from-black to-zinc-900">
+		<div class="bg-gradient-to-b bg-[#191A2E]">
 			<div class="max-w-7xl  mx-auto p-4">
 
         <div class="max-w-7xl my-24 mx-auto">
-            <h6 class="text-indigo-600 text-2xl mt-4 font-medium">Progression from Basic Malware to Complex Threats</h6>
+            <h6 class="text-[#E2C8F1] text-2xl mt-4 font-medium">Progression from Basic Malware to Complex Threats</h6>
             <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>    
             <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
         </div>
 
 
-        <div class="space-y-4">
-          <div class="text-medium text-2xl text-indigo-600">The Rise of Social Engineering and Human Exploitation</div>
+        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded">
+          <div class="text-medium text-2xl text-[#E2C8F1] mb-4">The Rise of Social Engineering and Human Exploitation</div>
           <div class="grid grid-cols-2 gap-8">
-              <img src="https://placehold.co/300x300" class="w-full rounded h-96 object-cover border">
+              <img src="https://placehold.co/300x300" class="w-full rounded h-96 object-cover border mb-4">
               <div class="flex items-center justify-center">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti molestias neque quaerat expedita odit veritatis alias dicta ex mollitia fugit, possimus doloribus ut nam odio laborum ullam tempora! Fugiat iure, veniam eum voluptatem nulla suscipit accusamus commodi fugit eos, iste sint cum atque corrupti omnis consequuntur perferendis adipisci cupiditate nostrum repudiandae hic molestiae. Numquam in provident hic facere illo, beatae harum laborum tempore pariatur nobis. Eligendi consequuntur hic dignissimos quas facere excepturi, quibusdam labore rerum harum eos earum veritatis, placeat omnis. Dolore nostrum aperiam dolorum, suscipit porro repellat ex velit est fugit neque harum ut. Et iste tempore harum veniam natus deleniti accusamus repellendus laboriosam perferendis eum, reprehenderit architecto odit quasi.</p>
               </div>
@@ -61,10 +62,10 @@
         </div>
 
 
-        <div class="space-y-4 mt-24">
-          <div class="text-medium text-2xl text-indigo-600">Modern Threats in Cloud Computing and IoT Environments</div>
+        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded mt-24">
+          <div class="text-medium text-2xl text-[#E2C8F1] mb-4">Modern Threats in Cloud Computing and IoT Environments</div>
           <div class="grid grid-cols-2 gap-8">
-              <img src="https://placehold.co/300x300" class="w-full rounded h-96 object-cover border">
+              <img src="https://placehold.co/300x300" class="w-full rounded h-96 object-cover border mb-4">
               <div class="flex items-center justify-center">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti molestias neque quaerat expedita odit veritatis alias dicta ex mollitia fugit, possimus doloribus ut nam odio laborum ullam tempora! Fugiat iure, veniam eum voluptatem nulla suscipit accusamus commodi fugit eos, iste sint cum atque corrupti omnis consequuntur perferendis adipisci cupiditate nostrum repudiandae hic molestiae. Numquam in provident hic facere illo, beatae harum laborum tempore pariatur nobis. Eligendi consequuntur hic dignissimos quas facere excepturi, quibusdam labore rerum harum eos earum veritatis, placeat omnis. Dolore nostrum aperiam dolorum, suscipit porro repellat ex velit est fugit neque harum ut. Et iste tempore harum veniam natus deleniti accusamus repellendus laboriosam perferendis eum, reprehenderit architecto odit quasi.</p>
               </div>
@@ -77,7 +78,7 @@
 		</div>
 		
 
-		<footer class="text-white w-full p-4 pt-24 bg-zinc-900">
+		<footer class="text-white w-full p-4 pt-24 bg-[#191A2E]">
             <div class="max-w-7xl mx-auto border p-6 border-zinc-700 bg-zinc-800 rounded md:flex block justify-between">
                 <div>
                     <div class="flex items-center space-x-4">
