--- a/famous-cyber-attacks.html
+++ b/famous-cyber-attacks.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
-		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
+		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
 			<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center  relative">
             <nav class="w-full p-4 flex items-center justify-between pb-12">
@@ -35,10 +35,10 @@
 
 			<!-- <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div> -->
 
-			<div class="flex flex-col md:flex-row items-center justify-between max-w-7xl mx-auto">
+			<div class="flex flex-col md:flex-row items-center justify-between max-w-6xl mx-auto gap-12">
 				<div class="md:w-1/2">
-					<h4 class="text-6xl font-medium"> <span class="text-[#6366F1]">Types</span> of Vulnerabilities</h4>
-					<p class="mt-4">Welcome to the section on Types of Vulnerabilities, where we uncover the hidden weaknesses that cyber attackers often exploit. From software bugs and misconfigurations to human errors and outdated systems, vulnerabilities come in many forms. This page breaks down the most common types, such as SQL injections and cross-site scripting, and explains how they impact system security. Understanding these flaws is the first step toward building safer, more resilient digital environments.</p>
+					<h4 class="text-6xl font-medium">Famous Cyber Attacks</h4>
+					<p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolor veniam quis exercitationem delectus est sapiente repudiandae ut vero id sequi ex nulla non dolores accusantium possimus tempore, sunt provident?.</p>
 				</div>
 					<div class="md:w-1/2 flex justify-center mt-8 md:mt-0">
 						<img src="assets/hacker.png" alt="Pic" class="max-w-full h-auto">
@@ -51,95 +51,116 @@
 
 		
 		<div class="">
-			<div class="grid md:grid-cols-3 grid-cols-1 gap-4 container mx-auto py-16">
+			<div class="grid md:grid-cols-4 grid-cols-1 gap-4 container mx-auto py-16">
 
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Software Bugs</h5>
-						<p class="my-2">Software bugs are defects or errors in a program's code that result in security flaws or unexpected behavior. They frequently happen as a result of miscommunication during development, human error, or a misunderstanding of the requirements.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">Ramsom Wannacry</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi porro architecto possimus laborum aspernatur in, sunt officia cupiditate numquam id, laudantium illo hic beatae eos maiores quam, ut nihil alias.</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded ">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Phishing</h5>
-						<p class="my-2">Phishing is a type of cyberattack in which attackers pose as reliable sources in an attempt to fool victims into disclosing private information, such as credit card numbers or passwords. Phishing emails, phony websites, or text messages are frequently used in these attacks.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">Yahoo Data Breaches</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maiores velit impedit modi id maxime quam, iusto libero necessitatibus deleniti, fuga saepe harum veniam possimus sequi ducimus, aut soluta nostrum!</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Ransomware</h5>
-						<p class="my-2">Malicious software known as ransomware encrypts or locks a victim's data and demands money to unlock it. Ransomware is typically distributed by attackers via phishing emails, malicious downloads, or taking advantage of software flaws. </p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">ILY Virus</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque voluptatum a, omnis eveniet recusandae quae ut dolorem voluptas delectus eum nesciunt libero iure, dolorum aspernatur vero, illo labore modi. Cumque? </p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Zero Day Exploit</h5>
-						<p class="my-2">Zero-day exploits focus on software flaws for which there is currently no patch and which the developers are unaware of. Before developers can fix the vulnerability, attackers can use it to obtain unauthorized access, steal data, or disrupt the system.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">Sony Picture Hack</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, dolore reiciendis quo, aut magnam at, eligendi vero numquam maxime expedita ab iusto possimus corporis hic quod exercitationem laboriosam sapiente a!.</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">SQL Injection</h5>
-						<p class="my-2">By inserting malicious code into input fields, a web security flaw known as SQL Injection (SQLi) enables attackers to alter database queries. If successful, attackers can gain unauthorized access to, alter, or even remove sensitive data.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">Lockbit Ransom</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est delectus dolorem omnis quibusdam illo porro recusandae quos magnam reprehenderit nisi aut maxime architecto, distinctio sint accusantium quod sit pariatur voluptatibus!.</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Cross-Site Scripting (XSS)</h5>
-						<p class="my-2">Vulnerabilities known as Cross-Site Scripting (XSS) arise when hackers insert malicious scripts into reliable websites, which subsequently run in the browsers of unwary users. Malware, user impersonation, and session cookie theft are all possible with XSS.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">Not Peya</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est delectus dolorem omnis quibusdam illo porro recusandae quos magnam reprehenderit nisi aut maxime architecto, distinctio sint accusantium quod sit pariatur voluptatibus!.</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Man in the the middle</h5>
-						<p class="my-2">A Man-in-the-Middle (MITM) attack occurs when a malicious actor intercepts communication between two parties without their knowledge. This eavesdropping allows the attacker to secretly relay or alter the communication, making it appear as though the legitimate exchange is still occurring directly between the intended participants.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">Pegasus Spyware</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est delectus dolorem omnis quibusdam illo porro recusandae quos magnam reprehenderit nisi aut maxime architecto, distinctio sint accusantium quod sit pariatur voluptatibus!.</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Privilege Escalation</h5>
-						<p class="my-2">Privilege escalation is the act of exploiting a bug or design flaw in an operating system or software application to gain elevated access to resources that are normally protected from an application or user. This can allow an attacker with limited access to perform actions reserved for higher-privileged users, such as administrators or root users.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">2016 COMELEC Data Breach</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est delectus dolorem omnis quibusdam illo porro recusandae quos magnam reprehenderit nisi aut maxime architecto, distinctio sint accusantium quod sit pariatur voluptatibus!.</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Insider Threats</h5>
-						<p class="my-2">Insider threats refer to security risks that originate from within an organization, typically from employees, former employees, contractors, or business associates who have or had authorized access to the organization's systems, data, or facilities. These threats can be intentional, involving malicious activities like data theft, sabotage, or fraud, or unintentional, resulting from negligence, errors, or a lack of security awareness.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">MySpace XSS</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis a quae hic suscipit sunt debitis vero numquam veritatis quo tempore eum laborum rerum officia autem, inventore ea qui eius aliquam.</p>
+						<div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
 					</div>
 				</div>
 	
 				<div class="bg-[#111436] outline outline-2 outline-white rounded">
 					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4 border-t-2 border-white">
-						<h5 class=" font-medium text-2xl">Insecure Direct Object Reference</h5>
-						<p class="my-2">Insecure Direct Object Reference (IDOR) is a type of access control vulnerability that arises when an application exposes an internal implementation object, such as a file, directory, or database record, through a parameter that a user can directly manipulate.</p>
-						<button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+						<h5 class=" font-medium text-2xl">The AWS DDoS Attack</h5>
+						<p class="my-2 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi tenetur ex voluptatem deleniti recusandae quos architecto ipsa veritatis! Quasi dolor nemo id aperiam ex reprehenderit facere quos fugiat nam inventore?</p>
+                        <div class="text-right">
+                            <button class="mt-2 bg-indigo-500 hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
+                        </div>
+						
 					</div>
 				</div>
 			</div>
